fixed scrollbar

--- a/src/pages/app/home/Home.css
+++ b/src/pages/app/home/Home.css
@@ -8,3 +8,22 @@
 
   
 }
+::-webkit-scrollbar {
+    width: 10px;
+
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px white;
+    border-radius: 100%;
+
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(168, 168, 167);
+    border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #929191;
+}
